# icedshell

./: .gitignore  Cargo.toml  LICENSE  flake.nix  justfile
src/: app.rs  config.rs  daemon.rs  delora.rs  divider.rs  fdo_icons.rs  feature.rs  fira_fonts.rs  layershell.rs  main.rs  theme.rs  types.rs  widget_ext.rs
src/audio/: mod.rs  stream.rs
src/bars/: delora_main.rs  delora_sec.rs  mod.rs  rena_main.rs  rena_sec.rs
src/clock/: mod.rs
src/cmd/: mod.rs
src/datetime/: clock.rs  date.rs  date_comp.rs  mod.rs
src/launcher/: app_serv.rs  mod.rs  modi.rs
src/niri/: mod.rs  monitors.rs  state.rs  state_serv.rs  stream.rs  types.rs  win_comp.rs  window.rs  ws.rs  ws_comp.rs
src/osd/: mod.rs
src/powermenu/: button.rs  button_comp.rs  dead_internet.rs  mod.rs  palette.rs
src/socket/: mod.rs
src/system_info/: battery.rs  cpu_temp.rs  mod.rs
src/theme/: app_theme.rs  color.rs  mod.rs  radius.rs  spacing.rs
src/tray/: dbus.rs  eventstream.rs  menu.rs  menu_comp.rs  mod.rs  module.rs  service.rs  tray_comp.rs  tray_stream.rs
src/widget/: atlas.rs  divider.rs  fdo_icons.rs  helpers.rs  mod.rs  text_ext.rs
