[package]
name = "icedshell"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"]}
dirs = "6.0.0"
iced = {version = "0.14.0", features = ["image", "wayland", "tokio"]}
iced_font_awesome = "0.4.1"
iced_layershell = "0.14.2"
tokio = {version = "1.49.0", features = ["fs", "rt", "macros", "process"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
