[package]
name = "icedshell"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"]}
derive_more = {version = "2.1.1", features = ["from"]}
dirs = "6.0.0"
hostname = "0.4.2"
iced = {version = "0.14.0", features = ["image", "wayland", "tokio"]}
iced_font_awesome = "0.4.1"
iced_layershell = "0.14.2"
niri-ipc = "25.11.0"
serde_json = "1.0.149"
thiserror = "2.0.18"
time = {version = "0.3.46", features = ["macros", "local-offset", "formatting"]}
time-macros = "0.2.26"
tokio = {version = "1.49.0", features = ["fs", "rt", "macros", "process", "net", "io-util"]}
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
